# CPS1011_Assignment

CPS1011/Question 1/: frequency.c  question_1_header.h
CPS1011/Question 2/: CMakeLists.txt
CPS1011/Question 2/Question_2a/: exportDT.c  mutateDT.c  projectDT.c  question_2a_header.h  showDT.c
CPS1011/Question 2/Question_2b/: loadDT_b.c  projectDT_b.c  question2_b.c  showDT_b.c
Question 1/: CMakeLists.txt  display.c  display_freq.c  init_array.c  question1_b.c  reverse.c
Question 2/Question_2a/: deinitDT.c  initDT.c  loadDT.c  question2_a.c
Question 2/Question_2b/: deinitDT_b.c  exportDT_b.c  initDT_b.c  mutateDT_b.c  question_2b_header.h
Question 2/Question_2c/: question2_c.c  question_2c_header.h
